--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-DB=mongodb+srv://admin_chat:fqs3Kxcc0ZXP5QuT@cluster0.hnlem.mongodb.net/chat
+DB=mongodb://0.0.0.0:27017/rodrilionel_chat
 JWTKEY=fnns23e@fkndjs783bd8jwjf0hg?ef6jhnsp
