--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "nodemon": "^2.0.18",
     "socket.io": "^2.3.0"
   }
 }
