--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-DB=mongodb+srv://enric:pr0v4nt@cluster0.t2kznqs.mongodb.net/test
+DB=mongodb://enric:pr0v4nt@cluster0.t2kznqs.mongodb.net:27017/test
 JWTKEY=fnns23e@fkndjs783bd8jwjf0hg?ef6jhnsp
